[package]
name = "bevy-align"
version = "0.0.0"
authors = ["Harenayo"]
edition = "2021"
description = "A simple crate to align entities in Bevy"
readme = "README.md"
repository = "https://github.com/harenayo/bevy-align"
license = "MIT"

[dependencies.bevy]
version = "0.13.2"
default-features = false

[features]
dev = ["bevy/default"]

[[example]]
name = "harmonic"
required-features = ["bevy/default"]
